--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "bootstrap": "~3.3.6",
     "ng-file-upload": "~12.1.0",
     "owasp-password-strength-test": "~1.3.0",
-    "sweetalert2": "^7.2.0"
+    "sweetalert2": "^7.2.0",
+    "jquery": "^3.2.1"
   },
   "overrides": {
     "bootstrap": {
@@ -28,5 +29,8 @@
     "jquery": {
       "main": []
     }
+  },
+  "devDependencies": {
+    "jquery": "^3.2.1"
   }
 }
