--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "owasp-password-strength-test": "~1.3.0",
     "sweetalert2": "^7.2.0",
     "jquery": "^3.2.1",
-    "jquery-ui": "^1.12.1"
+    "jquery-ui": "^1.12.1",
+    "components-font-awesome": "^4.7.0"
   },
   "overrides": {
     "bootstrap": {
