--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "sweetalert2": "^7.2.0",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
-    "components-font-awesome": "^4.7.0"
+    "components-font-awesome": "^4.7.0",
+    "loaders.css": "^0.1.2"
   },
   "overrides": {
     "bootstrap": {
