--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "morgan": "~1.8.1",
     "multer": "~1.3.0",
     "multer-s3": "^2.7.0",
+    "node-where": "^1.1.0",
     "nodemailer": "~4.0.1",
     "owasp-password-strength-test": "~1.3.0",
     "passport": "~0.3.2",
