--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
     "components-font-awesome": "^4.7.0",
-    "loaders.css": "^0.1.2"
+    "loaders.css": "^0.1.2",
+    "angular-bootstrap-toggle": "^0.1.3"
   },
   "overrides": {
     "bootstrap": {
