--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PORT = 80
+S3_ACCESS_KEY_ID = AKIAIIM46FSLFFWJ3SLA
+S3_SECRET_ACCESS_KEY = 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
+S3_BUCKET = meanjsnodetest
+UPLOADS_STORAGE = s3
